# crewai

./: readme.md
debate/src/debate/: crew.py  main.py
debate/src/debate/config/: agents.yaml  tasks.yaml
financial_researcher/src/financial_researcher/: crew.py  main.py
financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
resume_agent/: .gitignore  README.md  pyproject.toml
resume_agent/src/resume_agent/: crew.py  main.py
resume_agent/src/resume_agent/config/: agents.yaml  tasks.yaml
stock_picker/: .gitignore  pyproject.toml
stock_picker/src/stock_picker/: crew.py  main.py
stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
