[project]
name = "resume_agent"
version = "0.1.0"
description = "resume_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
resume_agent = "resume_agent.main:run"
run_crew = "resume_agent.main:run"
train = "resume_agent.main:train"
replay = "resume_agent.main:replay"
test = "resume_agent.main:test"
run_with_trigger = "resume_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
